--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <div class="containerFooter">
                 <figure>
                     <a href="#">
-                        <img src="./img/logo.jpeg" alt="Logo de Grupo I Soluciones Informaticas">
+                        <img src="./img/logo.png" alt="Logo de Grupo I Soluciones Informaticas">
                     </a>
                 </figure>
             </div>
