ajuste imagen camaras

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
                 <h2>Soluciones informáticas</h2>
 
-                <p>
-                    Contamos con más de 20 años de experiencia en el rubro, 
-                    y cada uno de nuestros<br> 
-                    técnicos e ingenieros cuenta con certificaciones 
-                    que lo avalan, lo que nos permite posicionarnos como uno de los<br> 
+                <p>Contamos con más de 20 años de experiencia en el rubro, 
+                    y cada uno<br> 
+                    de nuestros técnicos e ingenieros cuenta con certificaciones 
+                    que lo avalan,<br>
+                    lo que nos permite posicionarnos como uno de los<br> 
                     servicios técnicos más confiables del mercado.  
                 </p>
 
@@ -325,7 +325,7 @@
                         <h5 class="card-title">Camaras Seguridad</h5>
                         <p class="card-text">
                             Ingeniería en soluciones de sistemas de video vigilancia, integrando tecnología de CCTV . 
-                            Soluciones de control de acceso con dispositivos biométricos y tarjetas de proximidad.
+                            Soluciones de control de acceso con dispositivos biométricos y tarj. de proximidad.
                         </p>
                         <a href="#" class="btn btn-primary">Consultar</a>
                     </div>
