cambios colores y tamaño letra

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    -<!--INICIO HEADER-->
+    <!--INICIO HEADER-->
     <header class="containerHeader">
         
             <div class="instagram">
@@ -126,7 +126,7 @@
                 <p>
                     Es una empresa innovadora, que nace de la necesidad del público de obtener 
                     soporte técnico integral de excelencia. Por esto contamos con los mejores 
-                    técnicos e ingenieros en computación y redes,<br>
+                    técnicos e ingenieros en computación y redes,
                     los cuales cuentan con la más amplia experiencia en soporte informático 
                     tanto presencial como remoto, de manera de garantizar
                     a nuestros clientes que sus equipos estén siempre en manos de profesionales.
