cambie titulo principal

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
 
             <div class="sectionPrimeraDiv">
-                <h1>Grupo I </h1>
+                <h1>Grupo I Soluciones Informáticas </h1>
 
-                <h2>Soluciones informáticas</h2>
+                <h2>Soporte y mantenimiento de computadoras, celulares, servicios de hosting y backups</h2>
 
                 <p>Contamos con más de 20 años de experiencia en el rubro, 
                     y cada uno<br> 
