--- a/index.html
+++ b/index.html
@@ -274,6 +274,68 @@
         </section>
     <!--FIN SECTION SERVICIOS--> 
 
+    <!--SECTION COTIZADOR-->
+
+    <section class="containerCotizador" >
+
+        <h2>COTIZADOR ONLINE</h2>
+
+        <div class="containerRow">
+            <div class="formCotizadorImg">
+                <img src="./img/cotizador.jpg" alt="Imagencotizador"> 
+            </div>
+            <div class="formCotizador">
+                    <form action="">
+                        <table>
+                            <tr>
+                                <td><label for="">Ingrese servicio a cotizar</label></td>
+                                <td>
+                                    <select class="" name="">
+                                        <option value="">Mantenimiento de computadoras</option>
+                                        <option value="">Soporte para celulares</option>
+                                        <option value="">Cámaras de seguridad</option>
+                                        <option value="">Backup en la nube</option>
+                                        <option value="">Hosting web</option>
+                                        <option value="">Software legal</option>
+                                    </select>    
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label>Ingrese subservicio</label></td>
+                                <td>
+                                    <select class="" name="" >
+                                        <option value="">Actualizacion software</option>
+                                        <option value="">Actualizacion hardware</option>
+                                        <option value="">Celular cambio componentes</option>
+                                        <option value="">Celular reparación placa</option>
+                                        <option value="">Celular falla de carga</option>
+                                        <option value="">Camaras de seguridad mantenimiento</option>
+                                        <option value>Camaras de seguridad actualización</option>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="">Forma de pago</label></td>
+                                <td>
+                                    <select class="" name="">
+                                        <option value="">Contado efectivo</option>
+                                        <option value="">Tarjeta débito</option>
+                                        <option value="">Tarjeta crédito 1 pago</option>
+                                        <option value="">Tarjeta crédito 3 pagos</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button type="submit" class="btn btn-primary">Cotizar ahora</button>
+                                </td>
+                            </tr>
+                        </table>
+    
+                    </form>
+            </div>
+        </div>    
+    </section>
+
     <!--INICIO SECTION VENTA EQUIPOS-->    
 
         <div class="textoEquipos" id="VentadeEquipos">
